modify redirect page

--- a/test.html
+++ b/test.html
@@ -2,10 +2,11 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="20" >
+    <meta http-equiv="refresh" content="20">
     <title>Loading</title>
 </head>
 <body>
 <h1> Loading Now!!</h1>
+<a href="http://wifi-auth.local">Here</a>
 </body>
 </html>
